change font family and color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ layout: main
 {% include pagination.html %}
 <style>
 a{
+font-family: 'Lato', sans-serif;
 text-decoration:none;
-color:#000000;
+color:#515151;
 }
 </style>
